[package]
name = "checklist"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "notes"
path = "main.rs"
